--- a/style.css
+++ b/style.css
@@ -13,3 +13,49 @@
     width: 100px;
     height: 100px;
 }
+.prev{
+    cursor: pointer;
+    float: left;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    border: 2px solid black;
+    background-color: rebeccapurple;
+}
+.next{
+    cursor: pointer;
+    float: right;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    border: 2px solid black;
+    background-color: rebeccapurple;
+}
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+img{
+    width: 100%;
+    height: 100%;
+}
